# SWC-Studio

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  run_gui.py  swcstudio_bootstrap.py
.github/workflows/: docs.yml  install-smoke.yml  release.yml
data/: multi-soma.swc  single-soma_autofix.swc  single-soma_closed_20260325_135944.swc  single-soma_index_clean_report.txt
data/single-soma_logs/: single-soma_morphology_session_log_20260325_135944.txt
data/single-soma_swc_studio_output/: single-soma_geometry_disconnect_20260408_160336.txt  single-soma_geometry_move_node_20260408_160335.txt  single-soma_geometry_move_node_20260408_160717.swc  single-soma_geometry_move_node_20260408_160718.txt  single-soma_geometry_move_node_20260408_160947.txt  single-soma_simplification_log_20260331_220850.txt  single-soma_simplification_log_20260331_220940.txt
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CHECKS_AND_ISSUES_REFERENCE.md  CLI_REFERENCE.md  GETTING_STARTED.md  GPU_INSTALL.md  GUI_WORKFLOW.md  LOGS_AND_REPORTS.md  MACOS_PACKAGING.md  MODULE_REFERENCE.rst  Makefile  PLUGIN_DEMONSTRATION.md  PLUGIN_DEVELOPMENT.md  PROVENANCE_CONVERSION_GUIDE.md  PROVENANCE_REWIRE_CHECKLIST.md  PROVENANCE_SPEC.md  PYTHON_API_REFERENCE.rst  RADII_CLEANING_TUTORIAL.md  README.md  SMART_DECIMATION_TUTORIAL.md  SWC-Studio_Provenance.pptx  SWC-Studio_Provenance_Script.md  TOOL_TUTORIALS.md  VALIDATION_RULES.md  conf.py  index.rst
docs/_static/: custom.css
docs/about/: index.md
docs/documentation/: auto-typing-backends.md  custom-types-and-labels.md  index.md  integration-and-extension.md  reference.md  reports-and-outputs.md  setup.md  tutorials-and-guides.md  validation-and-repair.md  workflows.md
docs/tutorials/: cli-tutorial.md  gui-tutorial.md  index.md
examples/: download_allen_autolabel_dataset.py
examples/plugins/: summary_plugin_template.py
packaging/: MODULAR_BUILD.md  README.md  _zip_dist.py  build_macos.sh  build_macos_modular.sh  build_windows.ps1  icon.icns  make_windows_icon.py  pyinstaller_common.py  stage_modular_payload.py  swcstudio_bootstrap.py  swcstudio_gui.spec  swcstudio_gui_macos.spec  swcstudio_gui_modular.spec  swcstudio_gui_windows.spec  swctools_gui.spec  swctools_gui_windows.spec
paper/: update_flow.pptx
scripts/: generate_release_manifest.py  stamp_version.py  verify_distribution.py
swcstudio/: __init__.py  api.py
swcstudio/cli/: __init__.py  cli.py  history_cli.py  tracked_handlers_example.py
swcstudio/core/: __init__.py  api.py  auto_typing.py  auto_typing_catalog.py  auto_typing_impl.py  auto_typing_results.py  auto_typing_train.py  config.py  custom_types.py  geometry_editing.py  gpu_status.py  install_check.py  issues.py  model_paths.py  models.py  reporting.py  simplification.py  subtree_editing.py  swc_io.py  updater.py  validation.py  validation_catalog.py  validation_engine.py  validation_impl.py  validation_registry.py  validation_results.py  visualization.py
swcstudio/core/auto_typing/: __init__.py  _pickle_compat.py  _xgb_classifiers.py  baseline_disagreement.py  branch3_gate.py  branch_features.py  cell_type_detector.py  confidence.py  config.py  features.py  flagging.py  gnn_apical_basal.py  gnn_branch3_inference.py  gnn_branch3_rescue.py  gnn_dataset.py  gnn_inference.py  pipeline.py  qc_input.py  runner.py  stage3_refine.py  subtree_features.py  swc_normalize.py  train_stage1.py  train_stage2.py  types.py
swcstudio/core/provenance/: __init__.py  ai_run.py  archive.py  batch.py  canonical.py  crate.py  derived.py  diff.py  env.py  events.py  header.py  index.py  lockfile.py  migration.py  objects.py  ops.py  refs.py  render.py  tracked_op.py
swcstudio/core/validation_checks/: __init__.py  native_checks.py  neuron_morphology_checks.py
swcstudio/data/models/: flag_model_all_baseline.joblib  flag_model_interneuron.joblib  flag_model_pyramidal.joblib  flag_model_pyramidal_baseline.joblib  gnn_apical_basal.pt  gnn_branch3_rescue.pt  qc_gate.pkl
swcstudio/gui/: __init__.py  auto_label_process.py  auto_typing_guide.py  auto_typing_workers.py  batch_tab.py  constants.py  context_inspector.py  custom_type_dialog.py  dendrogram_widget.py  edit_history.py  editor_tab.py  font_utils.py  geometry_editing_panel.py  graph_utils.py  history_panel.py  issue_panel.py  main.py  main_window.py  manual_radii_panel.py  radii_cleaning_panel.py  report_popup.py  rule_batch_processor.py  simplification_panel.py  swc_table_widget.py  type_suspicion_process.py  validation_auto_label_panel.py  validation_core.py  validation_tab.py
swcstudio/plugins/: __init__.py  contracts.py  loader.py  registry.py
swcstudio/tools/: __init__.py
swcstudio/tools/analysis/: __init__.py
swcstudio/tools/batch_processing/: __init__.py
swcstudio/tools/geometry_editing/: __init__.py
swcstudio/tools/morphology_editing/: __init__.py
swcstudio/tools/validation/: __init__.py
swcstudio/tools/visualization/: __init__.py
swctools/: __init__.py  api.py
swctools/cli/: cli.py
swctools/core/: api.py  auto_typing_catalog.py  auto_typing_impl.py  custom_types.py  geometry_editing.py  issues.py  radii_cleaning.py  reporting.py  validation_catalog.py  validation_engine.py  validation_impl.py
swctools/core/validation_checks/: native_checks.py  neuron_morphology_checks.py
swctools/gui/: auto_typing_guide.py  batch_tab.py  constants.py  context_inspector.py  custom_type_dialog.py  dendrogram_widget.py  editor_tab.py  geometry_editing_panel.py  issue_panel.py  main.py  main_window.py  manual_radii_panel.py  neuron_3d_widget.py  radii_cleaning_panel.py  simplification_panel.py  validation_auto_label_panel.py  validation_tab.py
swctools/plugins/: __init__.py
tests/: __init__.py  evaluate_auto_label_folder_accuracy.py  evaluate_auto_label_metrics.py  test_auto_typing_qc.py  test_cli_autolabel_history.py  test_cli_smoke.py  test_gui_smoke.py  test_install_check.py  test_packaging_layout.py  test_performance_paths.py  test_provenance_archive.py  test_type_suspicion_process.py
tests/fixtures/: single-soma.swc
(+52 files in other folders)
