[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swcstudio"
version = "0.2.0"
description = "Modular SWC processing toolkit with shared core for CLI and GUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SWC-Studio Contributors"}]
dependencies = [
  # Core scientific stack
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "morphio>=3.3",
  "neurom>=4.0",
  # Auto-typing engine — Stage 1 + Stage 2 sklearn ensembles plus the
  # Stage 2b / Branch3 torch checkpoints. Pinned to the 1.5.x series
  # the bundled pickles were trained on; sklearn does not guarantee
  # cross-minor pickle compatibility.
  "scikit-learn>=1.5,<1.6",
  "xgboost>=3.2,<3.3",
  "torch>=2.1",
  "torch-geometric>=2.6",
  # GUI — the desktop app is the primary user surface, so PySide6 and
  # the visualization stack are required dependencies.
  "PySide6>=6.6",
  "pyqtgraph>=0.14",
  "vispy>=0.14",
  # Provenance layer (PROVENANCE_SPEC.md) — content-addressed blob
  # store uses zstd compression. Pure-Python is unacceptably slow
  # for the >100 MB envs we capture for AI runs.
  "zstandard>=0.22",
  # AES-encrypted history archive support for app-managed sidecar logs.
  "pyzipper>=0.3.6"
]

[project.optional-dependencies]
build = [
  "PyInstaller>=6.11"
]
docs = [
  "sphinx>=8.1,<8.2",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=3.0"
]
# Developer/maintainer extras — packaging tools + Sphinx for the docs.
# Regular end users do not need this.
all = [
  "PyInstaller>=6.11",
  "sphinx>=8.1,<8.2",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=3.0"
]

[project.scripts]
swcstudio = "swcstudio.cli.cli:main"
swcstudio-gui = "swcstudio.gui.main:main"

[tool.setuptools.packages.find]
include = ["swcstudio*"]

# Pattern B: lean wheel, models downloaded on first use.
# Setuptools defaults to auto-including any non-Python file inside a
# package directory as package-data ("include-package-data = true").
# We opt out so the model pickles don't end up in the wheel.
[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
# With include-package-data = false above, this empty mapping is the
# only source of truth: no extra data files ship in the wheel.
# Models are downloaded from GitHub Releases on first use by
# swcstudio.core.updater. The bundled .app distribution still ships
# models inside the bundle (see packaging/MODULAR_BUILD.md).
"swcstudio" = []

[tool.setuptools.exclude-package-data]
# Belt-and-suspenders: even if some path drags model files in via
# auto-discovery, this explicitly excludes them from the wheel.
"swcstudio" = ["data/models/*"]
