[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swcstudio"
version = "0.2.0"
description = "Modular SWC processing toolkit with shared core for CLI and GUI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [{name = "SWC-Studio Contributors"}]
dependencies = [
  # Core scientific stack
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "morphio>=3.3",
  "neurom>=4.0",
  # Auto-typing engine — Stage 1 + Stage 2 sklearn ensembles plus the
  # Stage 2b / Branch3 torch checkpoints. Pinned to the 1.5.x series
  # the bundled pickles were trained on; sklearn does not guarantee
  # cross-minor pickle compatibility.
  "scikit-learn>=1.5,<1.6",
  "joblib>=1.2",
  "xgboost>=3.2,<3.3",
  "torch>=2.1",
  "torch-geometric>=2.6",
  # GUI — the desktop app is the primary user surface, so PySide6 and
  # the visualization stack are required dependencies.
  "PySide6>=6.6",
  "pyqtgraph>=0.14",
  "vispy>=0.14",
  # Provenance layer (PROVENANCE_SPEC.md) — content-addressed blob
  # store uses zstd compression. Pure-Python is unacceptably slow
  # for the >100 MB envs we capture for AI runs.
  "zstandard>=0.22",
  # AES-encrypted history archive support for app-managed sidecar logs.
  "pyzipper>=0.3.6"
]

[project.optional-dependencies]
build = [
  "PyInstaller>=6.11"
]
docs = [
  "sphinx>=8.1,<8.2",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=3.0"
]
test = [
  "pytest>=8.3,<10"
]
# Maintainer environment: packaging, documentation, tests, and release
# artifact inspection. Regular end users do not need this.
dev = [
  "PyInstaller>=6.11",
  "sphinx>=8.1,<8.2",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=3.0",
  "pytest>=8.3,<10",
  "build>=1.2"
]

[project.scripts]
swcstudio = "swcstudio.cli.cli:main"
swcstudio-gui = "swcstudio.gui.main:main"

[tool.setuptools.packages.find]
include = ["swcstudio*"]

# The wheel is intentionally self-contained: runtime configuration and
# production model files ship with the package so a fresh installation
# can auto-label without a network download.
[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"swcstudio" = [
  "tools/*/configs/*.json",
  "data/models/*.pkl",
  "data/models/*.pt",
  "data/models/*.joblib"
]
